force-app/main/default/objects/nFORCE__Tile__c/nFORCE__Tile__c.object-meta.xml
<CustomObject>
    <description>This object contains supplemental information for a Route.</description>
    <label>Tile</label>
    <nameField>
        <label>Tile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>