force-app/main/default/objects/nFORCE__Tile__c/fields/nFORCE__Body__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Body__c</fullName>
    <description>The text displayed in the Tile. Supports formatted HTML.</description>
    <label>Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>