force-app/main/default/objects/nFORCE__Tile__c/fields/nFORCE__Header__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Header__c</fullName>
    <description>The title field for the Tile.</description>
    <label>Header</label>
    <length>80</length>
    <type>Text</type>
</CustomField>