force-app/main/default/objects/nFORCE__Tile__c/fields/nFORCE__Icon_Path__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Icon_Path__c</fullName>
    <description>This field is optional. If populated it should contain text which corresponds to an SLDS icon to be displayed on the Tile.</description>
    <inlineHelpText>Enter the path to an SLDS Icon (Custom, Standard, or Utility) starting after &apos;...icons/&apos;. For example, the account standard icon path would be &apos;standard-sprite/svg/symbols.svg#account&apos;.</inlineHelpText>
    <label>Icon Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>